# app/Http/Controllers/Auth/RegisterController.php
@@ -25,15 +25,10 @@ class RegisterController extends Controller
      * You can also set <b>registration.autologin</b> to <b>TRUE</b>.
      *
      * @bodyParam name string required The full name of the user. Example: John Bison Doe
-     * @bodyParam first_name string required The first name of the user. Example: John
-     * @bodyParam middle_name string required The middle name of the user. Example: Bison
-     * @bodyParam last_name string required The last name of the user. Example: Doe
      * @bodyParam email string required The email of the user. Example: johndoe@xyz.com
      * @bodyParam phone string required The phone of the user. Example: 08012345678
-     * @bodyParam unit_number string required The unit number of the user. Example: NG08012345678
      * @bodyParam password string required The password for user authentication must contain uppercase, lowercase, symbols, numbers. Example: Ex@m122p$%l6E
      * @bodyParam password_confirmation string required Must match <small class="badge badge-blue">password</small> Field. Example: Ex@m122p$%l6E
-     * @bodyParam type string The type of user must either be individual or business. Example: individual
      *
      * @response 200
      *
