# app/Models/UserSubNotification.php
@@ -2,21 +2,27 @@
 
 namespace App\Models;
 
+use App\Traits\BelongsToUser;
+use App\Traits\BelongsToWebsite;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
+use Illuminate\Database\Eloquent\Relations\BelongsTo;
 use Illuminate\Database\Eloquent\SoftDeletes;
 
 class UserSubNotification extends Model
 {
     use HasFactory, SoftDeletes;
+    use BelongsToUser, BelongsToWebsite;
 
     protected $fillable = [
-        'name',
-        'active'
+        'user_id',
+        'user_pub_id',
+        'website_id',
     ];
 
-    protected $casts = [
-        'active' => 'boolean',
-    ];
+    public function userPub(): BelongsTo
+    {
+        return $this->belongsTo(UserPub::class, 'user_pub_id');
+    }
 
 }
